# Author: Brandon Jernigan
# Net ID: brandonjernigan
# Date: September 29, 2014
# Assignment Number: 2

# All C source and header files in subdirectory “src” are included in project

cmake_minimum_required(VERSION 2.6)

# Name project

project (trending_project)

# Add subdirectory where second CMakeLists.txt is located

add_subdirectory (src)