# Author: Brandon Jernigan
# NetID: brandonjernigan
# Date: 12/6/2014
# Assignment: 5

# Define version of CMake used for current setup

cmake_minimum_required(VERSION 2.6)

# Define project name.

project (weighs_project)

# Add subdirectory to project where second CMakeLists.txt is located.

add_subdirectory(src)